# editor3d

./: .gitignore  CMakeLists.txt  fragment.fs  lightfragment.fs  main.cpp  outliner_fragment.fs  root_directory.h.in  vertex.vs
Buffers/: EBO.cpp  EBO.h  FBO.cpp  FBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
Camera/: Camera.cpp  Camera.h
Mesh/: Mesh.cpp  Mesh.h
Mesh/SkyBox/: Skybox.cpp  Skybox.h
Model/: Model.cpp  Model.h
Textures/: texture.cpp  texture.h
glad/: glad.c  glad.h
materials/: material.cpp  material.h
shader/: shader.cpp  shader.h
shader_files/: asteroid.vs  fragment.fs  framebuffer.fs  framebuffer.vs  geometry.gs  grass.fs  normals.fs  normals.gs  outliner_vertex.vs  skybox.fs  skybox.vs  vertex.vs  windows.fs
